# zephyr_examples

./: README.md
example_fs_sample/: .gitignore  CMakeLists.txt  README.md  nrf52dk_nrf52832.overlay  prj.conf
example_fs_sample/src/: main.c
example_max31328_rtc/: CMakeLists.txt  README.md  nrf52dk_nrf52832.overlay  prj.conf
example_max31328_rtc/src/: main.c
example_tca9548/: .gitignore  CMakeLists.txt  README.md  nrf52dk_nrf52832.overlay  prj.conf
example_tca9548/src/: main.c
example_veml7700_i2c/: README.md
example_veml7700_i2c/src/: main.c
